[BlinkGenPropertyTrees] Do not disable feature without command line flag

When we promoted BlinkGenPropertyTrees to experimental in
https://crrev.com/601429, the layout tests did not pick up the change
because SetRuntimeFeaturesDefaultsAndUpdateFromArgs would reset the
flag to disabled if --enable-blink-gen-property-trees was not passed on
the command line. This patch updates the code so that the command line
enabled flag only turns the feature on instead of directly controlling
the feature.

This patch also updates the SPV2 flag which has the same bug. I audited
other cases in runtime_features.cc and do not see other instances of
this bug.

Bug: 897772
Change-Id: I8902e88afd0c811096c4336cd6fcdc40218e3ec7
Reviewed-on: https://chromium-review.googlesource.com/c/1294200
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601931}
Former-commit-id: bbc3359105666ae9aa17a403ab0b64b423fef037